--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ p {
   background: #212042;
   margin-bottom: 20px;
   letter-spacing: 1px;
+  color: azure;
 }
 
 .form-control:focus {
@@ -123,18 +124,17 @@ span {
 
 .navbar-search {
   background-color: #d4d4d4;
-  position: absolute;
-  right: 0;
   border-radius: 2rem;
   padding: 0rem;
 }
 .navbar-search input {
   border: 0;
   background-color: transparent;
-  display: none;
   font-weight: bold;
+  border-radius: 2rem;
 }
 .navbar-search input:focus {
+  background-color: transparent;
   outline: none;
 }
 .navbar-search button:hover {
